--- a/css/trivia.css
+++ b/css/trivia.css
@@ -7,8 +7,6 @@
     padding-right: 100px;
 }
 
-
-
 .user_data {
     display: flex;
     flex-direction: column;
@@ -26,15 +24,28 @@
     padding: inherit;
 }
 
+.fa-clock{
+    margin-right: 5px;
+}
+
 .progress-bar {
     display: flex;
     flex-direction: row;
     align-items: center;
+    width: 100%;
+    font-family: 'Sora', sans-serif;
+}
+
+.progress-num {
+    margin: 0;
+    margin-left: 15px;
+    font-family: 'Sora', sans-serif;
 }
 
 .header {
     margin: 0;
     background-color: black;
+    height: 20%;
 }
 
 .row {
@@ -43,6 +54,21 @@
 
 .toolbox {
     background-color: #000000;
+    height: 20%
+}
+
+.toolbox-title {
+    color: white;
+    font-size: large;
+    margin-top: 10px;
+    font-family: 'Sora', sans-serif;
+}
+
+.yes {
+    position: absolute;
+    left: 0;
+    right: 0;
+    text-align: center;
 }
 
 h1 {
@@ -55,14 +81,10 @@ h1 {
 }
 
 .choice {
-    appearance: none;
     background-color: transparent;
     border: 2px solid #1A1A1A;
     border-radius: 15px;
-    box-sizing: border-box;
     color: white;
-    cursor: pointer;
-    display: inline-block;
     font-family: 'Sora', sans-serif;
     font-size: 20px;
     font-weight: 600;
@@ -70,66 +92,13 @@ h1 {
     margin: 0;
     min-height: 70px;
     max-height: 110px;
-    outline: none;
     padding: 16px 24px;
     text-align: center;
     text-decoration: none;
     transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
     width: 30%;
-    will-change: transform;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
-
-/* CSS */
-.button-18 {
-    align-items: center;
-    background-color: #0A66C2;
-    border: 0;
-    border-radius: 100px;
-    box-sizing: border-box;
-    color: #ffffff;
-    cursor: pointer;
-    display: inline-flex;
-    font-family: -apple-system, system-ui, system-ui, "Segoe UI", Roboto, "Helvetica Neue", "Fira Sans", Ubuntu, Oxygen, "Oxygen Sans", Cantarell, "Droid Sans", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Lucida Grande", Helvetica, Arial, sans-serif;
-    font-size: 16px;
-    font-weight: 600;
-    justify-content: center;
-    line-height: 20px;
-    max-width: 480px;
-    min-height: 40px;
-    min-width: 0px;
-    overflow: hidden;
-    padding: 0px;
-    padding-left: 20px;
-    padding-right: 20px;
-    text-align: center;
-    touch-action: manipulation;
-    transition: background-color 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s, box-shadow 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s, color 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s;
-    user-select: none;
-    -webkit-user-select: none;
-    vertical-align: middle;
-}
-
-.button-18:hover,
-.button-18:focus {
-    background-color: #16437E;
-    color: #ffffff;
-}
-
-.button-18:active {
-    background: #09223b;
-    color: rgb(255, 255, 255, .7);
-}
-
-.button-18:disabled {
-    cursor: not-allowed;
-    background: rgba(0, 0, 0, .08);
-    color: rgba(0, 0, 0, .3);
-}
-
 
 .choice-left {
     margin-right: 4%;
@@ -145,9 +114,34 @@ h1 {
     transform: translateY(-10px);
 }
 
-.choice:active {
-    box-shadow: none;
-    transform: translateY(0);
+.progress {
+    height: 40px;
+    border-radius: 50px;
+}
+
+.game {
+    height: 100%;
+}
+
+.btn-end {
+    align-items: center;
+    background-color: #0A66C2;
+    border: 0;
+    border-radius: 100px;
+    color: #ffffff;
+    font-weight: 600;
+    min-height: 40px;
+    min-width: 0px;
+    padding-left: 20px;
+    padding-right: 20px;
+    transition: background-color 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s;
+    display: block;
+    margin: auto;
+}
+
+.btn-end:hover {
+    background-color: #16437E;
+    color: #ffffff;
 }
 
 .correct {
@@ -160,6 +154,8 @@ h1 {
 
 .plus {
     text-shadow: 1px 1px 10px #000000;
+    font-size: 150px;
+    color: white;
 }
 
 .timer-warning {
@@ -174,10 +170,16 @@ h1 {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    height: 60%;
+}
+
+.btn-choice {
+    justify-content: center;
 }
 
 .summery {
     text-align: center;
+    font-family: 'Sora', sans-serif;
 }
 
 .modal-body {
@@ -209,10 +211,6 @@ h1 {
     color: black;
 }
 
-/* .icon-color:hover {
-    color: white;
-} */
-
 .icon-back {
     color: #fff;
     filter: drop-shadow(0 0 0.75rem #cce3de);
@@ -233,4 +231,13 @@ h1 {
     margin-left: auto;
     margin-right: auto;
     display: block;
+}
+
+.spinner-border {
+    width: 3rem;
+    height: 3rem;
+}
+
+.summery{
+    font-size: 20px;
 }
