--- a/includes/trivia.html
+++ b/includes/trivia.html
@@ -20,6 +20,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Secular+One&family=Sora:wght@300&display=swap"
         rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@600&family=Raleway:wght@600&family=Roboto&family=Rubik&family=Secular+One&family=Sora&display=swap"
+        rel="stylesheet">
     <link href='https://css.gg/trophy.css' rel='stylesheet'>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
@@ -35,26 +38,29 @@
     <div class="container">
         <div class="box">
 
+            <!-- game loading indication -->
+
             <div class="loadin d-flex justify-content-center">
-                <div style="width: 3rem; height: 3rem;" class="spinner-border text-light" role="status">
+                <div class="spinner-border text-light" role="status">
                     <span class="visually-hidden">Loading...</span>
                 </div>
             </div>
 
-            <div style="height: 100%;" class="game hide">
-                <div style="height: 20%;" class="row header">
+            <div class="game hide">
+
+                <!-- game header -->
+                <div class="row header">
                     <div class="col-4 user_data">
                         <div class="icon">
                             <i class="fa-solid fa-hashtag fa-xl"></i>
-                            <p class="progress-num" style="margin:0; margin-left:15px;">Question <span
-                                    class="currentQ"></span> out of <span class="maxQ"></span></p>
+                            <p class="progress-num">Question <span class="currentQ"></span> out of <span
+                                    class="maxQ"></span></p>
                         </div>
 
-                        <div style="height: 40px; border-radius: 50px;" class="progress">
+                        <div class="progress">
 
-                            <div class="progress-bar bg-success" role="progressbar" style="width: 100%"
-                                aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"><i style="margin-right: 5px;"
-                                    class="fa-regular fa-clock"></i> 30</div>
+                            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="100"
+                                aria-valuemin="0" aria-valuemax="100"><i class="fa-regular fa-clock"></i> 30</div>
                         </div>
 
                     </div>
@@ -66,13 +72,13 @@
                     <div class="col-4 user_data">
                         <div class="icon">
                             <i class="fa-solid fa-user-large fa-xl"></i>
-                            <span class="player" style="margin:0; margin-left:15px;"></span>
+                            <span class="player progress-num"></span>
 
                         </div>
 
                         <div class="icon">
                             <i class="fa-solid fa-trophy fa-xl"></i>
-                            <span class="score" style="margin:0; margin-left:15px;"></span>
+                            <span class="score progress-num"></span>
 
                         </div>
 
@@ -80,35 +86,24 @@
                             <i class="fa-solid fa-power-off fa-xl"></i>
                         </div> -->
 
-                        <!--                         
-                        <i class="bi bi-trophy"></i>
-                        <span class="material-icons material-icons-outlined">
-                            emoji_events
-                            </span>
-                        <p><span class="material-icons">emoji_events</span> 
-                            <span class="material-icons material-icons-two-tone">
-                                emoji_events
-                                </span>
-                            
-                        <i class="gg-trophy"></i><span id="name"></span></p> -->
-
-                        <!-- <p>score</p> -->
-
                     </div>
 
                 </div>
-                <div style="height: 60%;" class="gameQ row animate__animated">
+
+                <!-- game questions -->
+
+                <div class="gameQ row animate__animated">
                     <div class="row">
 
                         <h1 id="question"></h1>
                     </div>
-                    <div style="justify-content: center;" class="row btn-first-2">
+                    <div class="row btn-choice btn-first-2">
 
                         <button class="choice mt-3 animate__animated choice-left choice-hover"></button>
 
                         <button class="choice mt-3 animate__animated choice-hover"></button>
                     </div>
-                    <div style="justify-content: center;" class="row btn-last-2">
+                    <div class="row btn-choice btn-last-2">
 
                         <button class="choice mt-3 animate__animated choice-left choice-hover"></button>
 
@@ -116,9 +111,11 @@
                     </div>
                 </div>
 
-                <div style="height: 20%;" class="toolbox row">
+                <!-- game help tools -->
+
+                <div class="toolbox row">
                     <div class="row">
-                        <h1 style="color: white; font-size: large; margin-top: 10px;">Your Help Toolbox</h1>
+                        <h1 class="toolbox-title">Your Help Toolbox</h1>
                     </div>
 
                     <div class="row toolbox-icons">
@@ -144,29 +141,30 @@
                 </div>
             </div>
 
-            <div style="position: absolute; left: 0; right: 0; text-align: center;" class="yes hide">
-                <p style="font-size: 150px; color: white;" class="plus animate__animated animate__bounceIn">+10</p>
+            <div class="yes hide">
+                <p class="plus animate__animated animate__bounceIn">+10</p>
             </div>
 
-            <!-- Modal -->
+            <!-- End Game Modal -->
+
             <div class="modal fade" id="end-menu" tabindex="-1" aria-labelledby="end-menu" data-bs-backdrop="static"
                 data-bs-keyboard="false" aria-hidden="true">
-                <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-dialog modal-lg modal-dialog-centered">
                     <div class="modal-content">
                         <div class="modal-body">
-                            <h1>Nice Job!</h1>
-                            <p style="font-size: 20px;" class="summery">You got <span class="correctNum"></span> out of
-                                <span class="maxQ"></span> questions</p>
-                            <p style="font-size: 20px;" class="summery">With a score of <span class="score"></span></p>
-                            <button style="display: block; margin: auto;" class="button-18 play-again mt-3">Play
+                            <h1 class="congratz mb-3">Nice Job!</h1>
+                            <p class="summery">You got <strong> <span class="correctNum"></span></strong> out of
+                                <span class="maxQ"></span> questions.
+                            </p>
+                            <p class="summery">With a score of <strong> <span class="score"></span></strong>.</p>
+                            <button class="btn-end play-again mt-3">Play
                                 Again</button>
-                            <button style="display: block; margin: auto;" class="button-18 menu mt-3">Go to
+                            <button class="btn-end menu mt-3">Go to
                                 Menu</button>
                         </div>
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
 </body>
@@ -177,6 +175,7 @@
 <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
     crossorigin="anonymous"></script>
 
+<script src="../js/redirect.js"></script>
 <script src="../js/trivia.js"></script>
 
 
