--- a/includes/leaderboard.html
+++ b/includes/leaderboard.html
@@ -10,11 +10,14 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" rel="stylesheet">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Secular+One&family=Sora:wght@300&display=swap"
+        rel="stylesheet">
+ <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@600&family=Raleway:wght@600&family=Roboto&family=Rubik&family=Secular+One&family=Sora:wght@400;600&family=Work+Sans:wght@700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/leaderboard.css">
     <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
-
-
 
 </head>
 
@@ -25,7 +28,7 @@
             <img style="width: 50%; margin-left: auto; margin-right: auto; display: block;" src="../images/logo.png"
                 alt="">
 
-            <ul class="nav nav-tabs" id="myTab" role="tablist">
+            <!-- <ul class="nav nav-tabs" id="myTab" role="tablist">
                 <li class="nav-item" role="presentation">
                     <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home"
                         type="button" role="tab" aria-controls="home" aria-selected="true">All Time</button>
@@ -37,7 +40,7 @@
             </ul>
 
             <div class="tab-content" id="myTabContent">
-                <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab"> -->
                     <div class="leaderboard">
 
                         <div class="row highscoreTitle">
@@ -111,7 +114,7 @@
                 </div>
                 <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">...
                 </div>
-            </div>
+            <!-- </div> -->
 
         </div>
     </div>
