--- a/includes/triviawelcome.html
+++ b/includes/triviawelcome.html
@@ -53,7 +53,7 @@
                     <button name="12" class="btn-choice">
                         <span class="material-icons">audiotrack</span>
                         Music</button>
-                    <button name="13" class="btn-choice"><span class="material-icons"> 
+                    <button name="13" class="btn-choice"><span class="material-icons">
                             theaters
                         </span>Musicals & Theaters</button>
                     <button name="14" class="btn-choice"><span class="material-icons">
@@ -67,50 +67,52 @@
                     <button name="17" class="btn-choice"><span class="material-icons">
                             science
                         </span>Science & Nature</button>
-                    <button name="19" class="btn-choice"><span class="material-icons">
+                    <button name="18" class="btn-choice"><span class="material-icons">
                             computer
                         </span>Computers</button>
-                    <button name="20" class="btn-choice"><span class="material-icons">
+                    <button name="19" class="btn-choice"><span class="material-icons">
                             calculate
                         </span>Mathematics</button>
-                    <button name="21" class="btn-choice">Mythology</button>
-                    <button name="22" class="btn-choice"><span class="material-icons">
+                    <button name="20" class="btn-choice">Mythology</button>
+                    <button name="21" class="btn-choice"><span class="material-icons">
                             sports_soccer
                         </span>Sports</button>
-                    <button name="23" class="btn-choice"><span class="material-icons">
+                    <button name="22" class="btn-choice"><span class="material-icons">
                             public
                         </span>Geography</button>
-                    <button name="24" class="btn-choice"><span class="material-icons">
+                    <button name="23" class="btn-choice"><span class="material-icons">
                             history
                         </span>History</button>
-                    <button name="25" class="btn-choice"><span class="material-icons">
+                    <button name="24" class="btn-choice"><span class="material-icons">
                             gavel
                         </span>Politics</button>
-                    <button name="26" class="btn-choice"><span class="material-icons">
+                    <button name="25" class="btn-choice"><span class="material-icons">
                             brush
                         </span>Art</button>
-                    <button name="27" class="btn-choice"><span class="material-icons">
-                        remember_me
+                    <button name="26" class="btn-choice"><span class="material-icons">
+                            remember_me
                         </span>Celebrities</button>
-                    <button name="28" class="btn-choice"><span class="material-icons">
+                    <button name="27" class="btn-choice"><span class="material-icons">
                             cruelty_free
                         </span>Animals</button>
-                    <button name="29" class="btn-choice"><span class="material-icons">
+                    <button name="28" class="btn-choice"><span class="material-icons">
                             directions_car_filled
                         </span>Vehicles</button>
+                    <button name="29" class="btn-choice"><i class="fa-solid fa-comment-dots material-icons"></i>Comics</button>
                     <button name="30" class="btn-choice"><span class="material-icons">
                             watch
                         </span>Gadgets</button>
                     <button name="31" class="btn-choice"><span class="material-icons">
-                        auto_awesome
+                            auto_awesome
                         </span></i>Japanese Anime & Manga</button>
-                    <button name="32" class="btn-choice"><i class="fa-solid fa-dragon fa-lg material-icons"></i> Cartoon & Animations</button>
+                    <button name="32" class="btn-choice"><i class="fa-solid fa-dragon fa-lg material-icons"></i> Cartoon
+                        & Animations</button>
 
                     <div class="all-cat">
                         <button name="all" class="btn-choice"><span class="material-icons">
-                            chevron_left
+                                chevron_left
                             </span>ALL<span class="material-icons">
-                            navigate_next
+                                navigate_next
                             </span></button>
                     </div>
 
@@ -128,13 +130,17 @@
 
                 <div class="row go">
 
-                      <div class="alert alert-warning alert-dismissible animate__animated fade show hide" role="alert">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-exclamation-triangle-fill flex-shrink-0 me-2" viewBox="0 0 16 16" role="img" aria-label="Warning:">
-                            <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
-                          </svg>
-                        The category you chose does not have more than 20 questions. We modifies your game to 20 questions.
+                    <div class="alert alert-warning alert-dismissible animate__animated fade show hide" role="alert">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
+                            class="bi bi-exclamation-triangle-fill flex-shrink-0 me-2" viewBox="0 0 16 16" role="img"
+                            aria-label="Warning:">
+                            <path
+                                d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
+                        </svg>
+                        The category you chose does not have more than 20 questions. We modifies your game to 20
+                        questions.
                         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                      </div>
+                    </div>
 
                     <button class="btn-quiz mt-4 mb-3 hide" type="submit">
                         Start a Game <i class="fa-solid fa-arrow-right"></i>
