--- a/includes/homepage.html
+++ b/includes/homepage.html
@@ -56,12 +56,20 @@
 
                                 <div class="stats row">
                                     <div class="col-3">
-                                        <span class="material-icons">
+                                        <!-- <span class="material-icons">
                                             emoji_events
+                                        </span> -->
+
+                                        <span class="fa-stack fa-xl fifty animate__animated"
+                                            title="50/50 - Reavel 2 wrong answers!" data-bs-toggle="tooltip"
+                                            data-bs-placement="top">
+                                            <i class="fa-solid icon-back-trophy fa-circle fa-stack-2x"></i>
+                                            <i class="fa-solid fa-trophy fa-stack-1x fa-inverse icon-color"></i>
                                         </span>
+
                                     </div>
                                     <div class="col-9">
-                                        <p><span class="highest"></span> Highest Score</p>
+                                        <span><span class="highest"></span> Highest Score</span>
                                     </div>
 
                                 </div>
@@ -69,25 +77,40 @@
                                 <div class="stats row">
 
                                     <div class="col-3">
-                                        <span class="material-icons">
+                                        <!-- <span class="material-icons">
                                             check_circle
+                                        </span> -->
+
+                                        <span class="fa-stack fa-xl fifty animate__animated"
+                                            title="50/50 - Reavel 2 wrong answers!" data-bs-toggle="tooltip"
+                                            data-bs-placement="top">
+                                            <i class="fa-solid icon-back-check fa-circle fa-stack-2x"></i>
+                                            <i class="fa-solid fa-check fa-stack-1x fa-inverse icon-color"></i>
                                         </span>
+
                                     </div>
                                     <div class="col-9">
-                                        <p><span class="correct"></span> Correct Answers</p>
+                                        <span><span class="correct"></span> Correct Answers</span>
                                     </div>
 
                                 </div>
 
                                 <div class="stats row">
                                     <div class="col-3">
-
+                                        <span class="fa-stack fa-xl fifty animate__animated"
+                                            title="50/50 - Reavel 2 wrong answers!" data-bs-toggle="tooltip"
+                                            data-bs-placement="top">
+                                            <i class="fa-solid icon-back-games fa-circle fa-stack-2x"></i>
+                                            <i class="fa-solid fa-dice-five fa-stack-1x fa-inverse icon-color"></i>
+                                        </span>
+<!-- 
                                         <span class="material-icons">
                                             casino
-                                        </span>
+                                        </span> -->
+
                                     </div>
                                     <div class="col-9">
-                                        <p><span class="games"></span> Games Played</p>
+                                        <span><span class="games"></span> Games Played</span>
                                     </div>
 
                                 </div>
