--- a/includes/trivia.html
+++ b/includes/trivia.html
@@ -36,6 +36,10 @@
     <div class="container">
         <div class="box">
 
+            <audio id="correct-audio" src="../sound/correct.wav"></audio>
+
+            <audio id="incorrect-audio" src="../sound/incorrect.mp3"></audio>
+
             <!-- game loading indication -->
 
             <div class="loadin d-flex justify-content-center">
@@ -80,9 +84,6 @@
 
                         </div>
 
-                        <!-- <div class="exit icon">
-                            <i class="fa-solid fa-power-off fa-xl"></i>
-                        </div> -->
 
                     </div>
 
