--- a/css/leaderboard.css
+++ b/css/leaderboard.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Maven+Pro:wght@600&family=Raleway:wght@600&family=Roboto&family=Rubik&family=Secular+One&family=Sora:wght@400;600&family=Titillium+Web:wght@700&display=swap');
 
-.highscore{
+.highscore {
     background-color: white;
     height: 40px;
     width: 40%;
@@ -15,11 +15,42 @@
     font-family: 'Sora', sans-serif;
 }
 
-.highscore:hover{
+.logo {
+    width: 40%;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+
+.btn-menu {
+    align-items: center;
+    background-color: #0a9396;
+    border: 0;
+    border-radius: 100px;
+    box-sizing: border-box;
+    color: #ffffff;
+    display: inline-flex;
+    font-family: 'Maven Pro', sans-serif;
+    font-size: 40px;
+    height: 80px;
+    font-weight: 600;
+    justify-content: center;
+    line-height: 20px;
+    max-width: 400px;
+    text-align: center;
+    box-shadow: rgba(0, 0, 0, .2) 0 3px 5px -1px, rgba(0, 0, 0, .14) 0 6px 10px 0, rgba(0, 0, 0, .12) 0 1px 18px 0;
+    transition: background-color 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s;
+}
+
+.btn-menu:hover {
+    background-color: #13777a;
+}
+
+.highscore:hover {
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
-.leaderboard{
+.leaderboard {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -27,17 +58,17 @@
     height: 50%;
 }
 
-.nav-tabs{
+.nav-tabs {
     border: 0px;
     justify-content: center;
 }
 
-.nav-item{
+.nav-item {
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 
-.highscoreTitle{
+.highscoreTitle {
     background-color: white;
     height: 40px;
     width: 40%;
@@ -49,12 +80,12 @@
     padding-left: 30px;
     padding-right: 30px;
     align-items: center;
-    font-family: 'Titillium Web', sans-serif;    
+    font-family: 'Titillium Web', sans-serif;
     font-size: larger;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 
-.row{
+.row {
     text-align: center;
 }
