--- a/includes/trivia.html
+++ b/includes/trivia.html
@@ -62,7 +62,7 @@
                         <div class="progress">
 
                             <div class="progress-bar bg-success" role="progressbar" aria-valuenow="100"
-                                aria-valuemin="0" aria-valuemax="100"><i class="fa-regular fa-clock"></i> 30</div>
+                                aria-valuemin="0" aria-valuemax="100"><i class="fa-regular fa-clock"></i> <span class="seconds"> 30</span></div>
                         </div>
 
                     </div>
