--- a/includes/leaderboard.html
+++ b/includes/leaderboard.html
@@ -39,7 +39,7 @@
                 <div class="row highscore">
                     <div class="col-4">
                         <span class="rank">
-                            <span class="fa-stack" style="vertical-align: top;">
+                            <span class="fa-stack">
                                 <i class="fa-solid fa-circle fa-stack-2x"></i>
                                 <i class="fa-solid fa-1 fa-stack-1x fa-inverse"></i>
                             </span>
@@ -55,7 +55,7 @@
 
                 <div class="row highscore two">
                     <div class="col-4"><span class="rank">
-                            <span class="fa-stack" style="vertical-align: top;">
+                            <span class="fa-stack">
                                 <i class="fa-solid fa-circle fa-stack-2x"></i>
                                 <i class="fa-solid fa-2 fa-stack-1x fa-inverse"></i>
                             </span>
@@ -70,7 +70,7 @@
                 </div>
 
                 <div class="row highscore three">
-                    <div class="col-4"><span class="rank"> <span class="fa-stack" style="vertical-align: top;">
+                    <div class="col-4"><span class="rank"> <span class="fa-stack">
                                 <i class="fa-solid fa-circle fa-stack-2x"></i>
                                 <i class="fa-solid fa-3 fa-stack-1x fa-inverse"></i>
                             </span></span></div>
@@ -79,7 +79,7 @@
                 </div>
 
                 <div class="row highscore four">
-                    <div class="col-4"><span class="rank"> <span class="fa-stack" style="vertical-align: top;">
+                    <div class="col-4"><span class="rank"> <span class="fa-stack">
                                 <i class="fa-solid fa-circle fa-stack-2x"></i>
                                 <i class="fa-solid fa-4 fa-stack-1x fa-inverse"></i>
                             </span></span> </div>
@@ -88,7 +88,7 @@
                 </div>
 
                 <div class="row highscore five">
-                    <div class="col-4"> <span class="rank"> <span class="fa-stack" style="vertical-align: top;">
+                    <div class="col-4"> <span class="rank"> <span class="fa-stack">
                                 <i class="fa-solid fa-circle fa-stack-2x"></i>
                                 <i class="fa-solid fa-5 fa-stack-1x fa-inverse"></i>
                             </span></span> </div>
