--- a/includes/triviawelcome.html
+++ b/includes/triviawelcome.html
@@ -72,7 +72,8 @@
                     <button name="19" class="btn-choice"><span class="material-icons">
                             calculate
                         </span>Mathematics</button>
-                    <button name="20" class="btn-choice">Mythology</button>
+                    <button name="20" class="btn-choice"><i class="fa-solid fa-landmark fa-lg material-icons"></i>
+                        Mythology</button>
                     <button name="21" class="btn-choice"><span class="material-icons">
                             sports_soccer
                         </span>Sports</button>
